...

class FooterNav extends Component {
  render () {
    return (
      <Footer>
        <FooterTab>
          <Button onPress={this.props.openDealsScreen} active={this.props.active === 'DealsScreen'} testID={"footerDealsButton"}>
          <Icon name='apps' />
          </Button>
          <Button onPress={this.props.openQRScreen} active={this.props.active === 'QRScreen'}>
            <Icon name='camera' />
          </Button>
          <Button>
...
